--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,52 +1,124 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
-
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
-
-  --vt-c-indigo: #2c3e50;
-
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+  --md-sys-color-primary: rgb(64 95 144);
+    --md-sys-color-surface-tint: rgb(64 95 144);
+    --md-sys-color-on-primary: rgb(255 255 255);
+    --md-sys-color-primary-container: rgb(214 227 255);
+    --md-sys-color-on-primary-container: rgb(0 27 61);
+    --md-sys-color-secondary: rgb(85 95 113);
+    --md-sys-color-on-secondary: rgb(255 255 255);
+    --md-sys-color-secondary-container: rgb(217 227 249);
+    --md-sys-color-on-secondary-container: rgb(18 28 43);
+    --md-sys-color-tertiary: rgb(111 86 117);
+    --md-sys-color-on-tertiary: rgb(255 255 255);
+    --md-sys-color-tertiary-container: rgb(249 216 254);
+    --md-sys-color-on-tertiary-container: rgb(40 19 47);
+    --md-sys-color-error: rgb(186 26 26);
+    --md-sys-color-on-error: rgb(255 255 255);
+    --md-sys-color-error-container: rgb(255 218 214);
+    --md-sys-color-on-error-container: rgb(65 0 2);
+    --md-sys-color-background: rgb(249 249 255);
+    --md-sys-color-on-background: rgb(25 28 32);
+    --md-sys-color-surface: rgb(249 249 255);
+    --md-sys-color-on-surface: rgb(25 28 32);
+    --md-sys-color-surface-variant: rgb(224 226 236);
+    --md-sys-color-on-surface-variant: rgb(68 71 78);
+    --md-sys-color-outline: rgb(116 119 127);
+    --md-sys-color-outline-variant: rgb(196 198 207);
+    --md-sys-color-shadow: rgb(0 0 0);
+    --md-sys-color-scrim: rgb(0 0 0);
+    --md-sys-color-inverse-surface: rgb(46 48 54);
+    --md-sys-color-inverse-on-surface: rgb(240 240 247);
+    --md-sys-color-inverse-primary: rgb(169 199 255);
+    --md-sys-color-primary-fixed: rgb(214 227 255);
+    --md-sys-color-on-primary-fixed: rgb(0 27 61);
+    --md-sys-color-primary-fixed-dim: rgb(169 199 255);
+    --md-sys-color-on-primary-fixed-variant: rgb(38 71 119);
+    --md-sys-color-secondary-fixed: rgb(217 227 249);
+    --md-sys-color-on-secondary-fixed: rgb(18 28 43);
+    --md-sys-color-secondary-fixed-dim: rgb(189 199 220);
+    --md-sys-color-on-secondary-fixed-variant: rgb(62 71 88);
+    --md-sys-color-tertiary-fixed: rgb(249 216 254);
+    --md-sys-color-on-tertiary-fixed: rgb(40 19 47);
+    --md-sys-color-tertiary-fixed-dim: rgb(220 188 225);
+    --md-sys-color-on-tertiary-fixed-variant: rgb(86 62 92);
+    --md-sys-color-surface-dim: rgb(217 217 224);
+    --md-sys-color-surface-bright: rgb(249 249 255);
+    --md-sys-color-surface-container-lowest: rgb(255 255 255);
+    --md-sys-color-surface-container-low: rgb(243 243 250);
+    --md-sys-color-surface-container: rgb(237 237 244);
+    --md-sys-color-surface-container-high: rgb(231 232 238);
+    --md-sys-color-surface-container-highest: rgb(226 226 233);
+    --md-extended-color-custom-color-color: rgb(58 96 143);
+    --md-extended-color-custom-color-on-color: rgb(255 255 255);
+    --md-extended-color-custom-color-color-container: rgb(211 227 255);
+    --md-extended-color-custom-color-on-color-container: rgb(0 28 57);
 }
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --color-background: var(--md-sys-color-background);
+  --color-heading: var(--md-sys-color-on-background);
+  --color-text: var(--md-sys-color-on-background);
 
   --section-gap: 160px;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --md-sys-color-primary: rgb(169 199 255);
+    --md-sys-color-surface-tint: rgb(169 199 255);
+    --md-sys-color-on-primary: rgb(8 48 95);
+    --md-sys-color-primary-container: rgb(38 71 119);
+    --md-sys-color-on-primary-container: rgb(214 227 255);
+    --md-sys-color-secondary: rgb(189 199 220);
+    --md-sys-color-on-secondary: rgb(39 49 65);
+    --md-sys-color-secondary-container: rgb(62 71 88);
+    --md-sys-color-on-secondary-container: rgb(217 227 249);
+    --md-sys-color-tertiary: rgb(220 188 225);
+    --md-sys-color-on-tertiary: rgb(62 40 69);
+    --md-sys-color-tertiary-container: rgb(86 62 92);
+    --md-sys-color-on-tertiary-container: rgb(249 216 254);
+    --md-sys-color-error: rgb(255 180 171);
+    --md-sys-color-on-error: rgb(105 0 5);
+    --md-sys-color-error-container: rgb(147 0 10);
+    --md-sys-color-on-error-container: rgb(255 218 214);
+    --md-sys-color-background: rgb(17 19 24);
+    --md-sys-color-on-background: rgb(226 226 233);
+    --md-sys-color-surface: rgb(17 19 24);
+    --md-sys-color-on-surface: rgb(226 226 233);
+    --md-sys-color-surface-variant: rgb(68 71 78);
+    --md-sys-color-on-surface-variant: rgb(196 198 207);
+    --md-sys-color-outline: rgb(142 144 153);
+    --md-sys-color-outline-variant: rgb(68 71 78);
+    --md-sys-color-shadow: rgb(0 0 0);
+    --md-sys-color-scrim: rgb(0 0 0);
+    --md-sys-color-inverse-surface: rgb(226 226 233);
+    --md-sys-color-inverse-on-surface: rgb(46 48 54);
+    --md-sys-color-inverse-primary: rgb(64 95 144);
+    --md-sys-color-primary-fixed: rgb(214 227 255);
+    --md-sys-color-on-primary-fixed: rgb(0 27 61);
+    --md-sys-color-primary-fixed-dim: rgb(169 199 255);
+    --md-sys-color-on-primary-fixed-variant: rgb(38 71 119);
+    --md-sys-color-secondary-fixed: rgb(217 227 249);
+    --md-sys-color-on-secondary-fixed: rgb(18 28 43);
+    --md-sys-color-secondary-fixed-dim: rgb(189 199 220);
+    --md-sys-color-on-secondary-fixed-variant: rgb(62 71 88);
+    --md-sys-color-tertiary-fixed: rgb(249 216 254);
+    --md-sys-color-on-tertiary-fixed: rgb(40 19 47);
+    --md-sys-color-tertiary-fixed-dim: rgb(220 188 225);
+    --md-sys-color-on-tertiary-fixed-variant: rgb(86 62 92);
+    --md-sys-color-surface-dim: rgb(17 19 24);
+    --md-sys-color-surface-bright: rgb(55 57 62);
+    --md-sys-color-surface-container-lowest: rgb(12 14 19);
+    --md-sys-color-surface-container-low: rgb(25 28 32);
+    --md-sys-color-surface-container: rgb(29 32 36);
+    --md-sys-color-surface-container-high: rgb(40 42 47);
+    --md-sys-color-surface-container-highest: rgb(51 53 58);
+    --md-extended-color-custom-color-color: rgb(164 201 254);
+    --md-extended-color-custom-color-on-color: rgb(0 49 93);
+    --md-extended-color-custom-color-color-container: rgb(32 72 118);
+    --md-extended-color-custom-color-on-color-container: rgb(211 227 255);
   }
 }
 
@@ -67,19 +139,10 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+    'Chakra Petch',
+    'Noto Sans',
     sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
