--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,5 @@
-/* color palette from <https://github.com/vuejs/theme> */
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 :root {
   --md-sys-color-primary: rgb(64 95 144);
     --md-sys-color-surface-tint: rgb(64 95 144);
@@ -60,6 +61,9 @@
   --color-background: var(--md-sys-color-background);
   --color-heading: var(--md-sys-color-on-background);
   --color-text: var(--md-sys-color-on-background);
+
+  --md-ref-typeface-brand: 'Chakra Petch';
+  --md-ref-typeface-plain: system-ui;
 
   --section-gap: 160px;
 }
@@ -140,7 +144,6 @@ body {
   line-height: 1.6;
   font-family:
     'Chakra Petch',
-    'Noto Sans',
     sans-serif;
   font-size: 16px;
   text-rendering: optimizeLegibility;
