--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,11 +1,10 @@
 @use './typography.scss';
+@use './common/badge.scss';
 @import './base.css';
 
-#app {
+#app-wrapper {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-
-  
 }
