--- a/src/assets/typography.scss
+++ b/src/assets/typography.scss
@@ -47,9 +47,7 @@ h6 {
 }
 
 :root {
-    --md-ref-typeface-brand: 'Chakra Petch';
-    --md-ref-typeface-plain: system-ui;
-
+    font-family: 'Chakra Petch', sans-serif;
     font-size: 14px;
     letter-spacing: 0.5px;
 }
