--- a/src/assets/components/pill.scss
+++ b/src/assets/components/pill.scss
@@ -1,11 +1,12 @@
+@use "@/assets/common/variables.scss" as *; // Import variables
+@use "@/assets/common/theme.scss" as *; // Import theme styles and variables
+
 .pill {
     display: inline-block;
-    padding: 0.5rem 1rem;
-    border-radius: 9999px;
+    padding: $spacing-xs $spacing-sm;
+    border-radius: 1em;
     background-color: #f0f0f0;
     color: #333;
-    font-size: 0.875rem;
-    font-weight: 500;
     text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease, color 0.3s ease;
