--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,7 @@
 @use '@/assets/common/typography.scss' as *;
 @use '@/assets/components/coin.scss' as *;
 @use '@/assets/components/pill.scss' as *;
+@use '@/assets/components/card.scss' as *;
 // @import './base.css';
 
 #app-wrapper {
