--- a/src/assets/components/coin.scss
+++ b/src/assets/components/coin.scss
@@ -3,23 +3,14 @@
 
 .coin {
     border-radius: 50%;
-    
-    text-transform: uppercase;    
+    width: 48px;
+    height: 48px;
+    padding: $spacing-md;
     display: inline-block;
-    text-align: center;
-    // color: theme.map.get(theme.$light-theme, secondary);
-    // background-color: theme.map.get(theme.$light-theme, secondary);
 
-    width: auto;
-    height: auto;
-    padding: $spacing-sm;
-    font-size: 14px;
-    border-radius: 6px;
-
-    &.small {
-        width: 20px;
-        height: 20px;
-        font-size: 10px;
-        line-height: 20px;
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
     }
 }
