--- a/src/assets/components/card.scss
+++ b/src/assets/components/card.scss
@@ -1,20 +1,39 @@
-@use "@/assets/common/variables.scss" as *; // Import variables
-@use "@/assets/common/theme.scss" as *; // Import theme styles and variables
-@use "sass:map"; // Import the map module
+@use '@/assets/common/variables.scss' as *; // Import variables
+@use '@/assets/common/theme.scss' as *; // Import theme styles and variables
+@use 'sass:map'; // Import the map module
 
 .project-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: $spacing-md;
-    width: 400px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    background-color: map.get($light-theme, background); // Use light theme background color
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: $spacing-md;
+  width: 400px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
+  background-color: map.get($light-theme, background); // Use light theme background color
 
-    &:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    }
+  &:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+
+  h4 {
+    margin-bottom: $spacing-md;
+  }
+  & > p {
+    margin: 0px;
+  }
+
+  & > ul {
+    list-style: none;
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  & > a {
+    text-align: end;
+  }
 }
