--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,64 +1,64 @@
 :root {
-    --md-sys-color-primary: rgb(64 95 144);
-    --md-sys-color-surface-tint: rgb(64 95 144);
-    --md-sys-color-on-primary: rgb(255 255 255);
-    --md-sys-color-primary-container: rgb(214 227 255);
-    --md-sys-color-on-primary-container: rgb(0 27 61);
-    --md-sys-color-secondary: rgb(85 95 113);
-    --md-sys-color-on-secondary: rgb(255 255 255);
-    --md-sys-color-secondary-container: rgb(217 227 249);
-    --md-sys-color-on-secondary-container: rgb(18 28 43);
-    --md-sys-color-tertiary: rgb(111 86 117);
-    --md-sys-color-on-tertiary: rgb(255 255 255);
-    --md-sys-color-tertiary-container: rgb(249 216 254);
-    --md-sys-color-on-tertiary-container: rgb(40 19 47);
-    --md-sys-color-error: rgb(186 26 26);
-    --md-sys-color-on-error: rgb(255 255 255);
-    --md-sys-color-error-container: rgb(255 218 214);
-    --md-sys-color-on-error-container: rgb(65 0 2);
-    --md-sys-color-background: rgb(249 249 255);
-    --md-sys-color-on-background: rgb(25 28 32);
-    --md-sys-color-surface: rgb(249 249 255);
-    --md-sys-color-on-surface: rgb(25 28 32);
-    --md-sys-color-surface-variant: rgb(224 226 236);
-    --md-sys-color-on-surface-variant: rgb(68 71 78);
-    --md-sys-color-outline: rgb(116 119 127);
-    --md-sys-color-outline-variant: rgb(196 198 207);
-    --md-sys-color-shadow: rgb(0 0 0);
-    --md-sys-color-scrim: rgb(0 0 0);
-    --md-sys-color-inverse-surface: rgb(46 48 54);
-    --md-sys-color-inverse-on-surface: rgb(240 240 247);
-    --md-sys-color-inverse-primary: rgb(169 199 255);
-    --md-sys-color-primary-fixed: rgb(214 227 255);
-    --md-sys-color-on-primary-fixed: rgb(0 27 61);
-    --md-sys-color-primary-fixed-dim: rgb(169 199 255);
-    --md-sys-color-on-primary-fixed-variant: rgb(38 71 119);
-    --md-sys-color-secondary-fixed: rgb(217 227 249);
-    --md-sys-color-on-secondary-fixed: rgb(18 28 43);
-    --md-sys-color-secondary-fixed-dim: rgb(189 199 220);
-    --md-sys-color-on-secondary-fixed-variant: rgb(62 71 88);
-    --md-sys-color-tertiary-fixed: rgb(249 216 254);
-    --md-sys-color-on-tertiary-fixed: rgb(40 19 47);
-    --md-sys-color-tertiary-fixed-dim: rgb(220 188 225);
-    --md-sys-color-on-tertiary-fixed-variant: rgb(86 62 92);
-    --md-sys-color-surface-dim: rgb(217 217 224);
-    --md-sys-color-surface-bright: rgb(249 249 255);
-    --md-sys-color-surface-container-lowest: rgb(255 255 255);
-    --md-sys-color-surface-container-low: rgb(243 243 250);
-    --md-sys-color-surface-container: rgb(237 237 244);
-    --md-sys-color-surface-container-high: rgb(231 232 238);
-    --md-sys-color-surface-container-highest: rgb(226 226 233);
-    --md-extended-color-custom-color-color: rgb(58 96 143);
-    --md-extended-color-custom-color-on-color: rgb(255 255 255);
-    --md-extended-color-custom-color-color-container: rgb(211 227 255);
-    --md-extended-color-custom-color-on-color-container: rgb(0 28 57);
+    --color-primary: rgb(64 95 144);
+    --color-surface-tint: rgb(64 95 144);
+    --color-on-primary: rgb(255 255 255);
+    --color-primary-container: rgb(214 227 255);
+    --color-on-primary-container: rgb(0 27 61);
+    --color-secondary: rgb(85 95 113);
+    --color-on-secondary: rgb(255 255 255);
+    --color-secondary-container: rgb(217 227 249);
+    --color-on-secondary-container: rgb(18 28 43);
+    --color-tertiary: rgb(111 86 117);
+    --color-on-tertiary: rgb(255 255 255);
+    --color-tertiary-container: rgb(249 216 254);
+    --color-on-tertiary-container: rgb(40 19 47);
+    --color-error: rgb(186 26 26);
+    --color-on-error: rgb(255 255 255);
+    --color-error-container: rgb(255 218 214);
+    --color-on-error-container: rgb(65 0 2);
+    --color-background: rgb(249 249 255);
+    --color-on-background: rgb(25 28 32);
+    --color-surface: rgb(249 249 255);
+    --color-on-surface: rgb(25 28 32);
+    --color-surface-variant: rgb(224 226 236);
+    --color-on-surface-variant: rgb(68 71 78);
+    --color-outline: rgb(116 119 127);
+    --color-outline-variant: rgb(196 198 207);
+    --color-shadow: rgb(0 0 0);
+    --color-scrim: rgb(0 0 0);
+    --color-inverse-surface: rgb(46 48 54);
+    --color-inverse-on-surface: rgb(240 240 247);
+    --color-inverse-primary: rgb(169 199 255);
+    --color-primary-fixed: rgb(214 227 255);
+    --color-on-primary-fixed: rgb(0 27 61);
+    --color-primary-fixed-dim: rgb(169 199 255);
+    --color-on-primary-fixed-variant: rgb(38 71 119);
+    --color-secondary-fixed: rgb(217 227 249);
+    --color-on-secondary-fixed: rgb(18 28 43);
+    --color-secondary-fixed-dim: rgb(189 199 220);
+    --color-on-secondary-fixed-variant: rgb(62 71 88);
+    --color-tertiary-fixed: rgb(249 216 254);
+    --color-on-tertiary-fixed: rgb(40 19 47);
+    --color-tertiary-fixed-dim: rgb(220 188 225);
+    --color-on-tertiary-fixed-variant: rgb(86 62 92);
+    --color-surface-dim: rgb(217 217 224);
+    --color-surface-bright: rgb(249 249 255);
+    --color-surface-container-lowest: rgb(255 255 255);
+    --color-surface-container-low: rgb(243 243 250);
+    --color-surface-container: rgb(237 237 244);
+    --color-surface-container-high: rgb(231 232 238);
+    --color-surface-container-highest: rgb(226 226 233);
+    --extended-color-custom-color-color: rgb(58 96 143);
+    --extended-color-custom-color-on-color: rgb(255 255 255);
+    --extended-color-custom-color-color-container: rgb(211 227 255);
+    --extended-color-custom-color-on-color-container: rgb(0 28 57);
 }
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--md-sys-color-background);
-  --color-heading: var(--md-sys-color-on-background);
-  --color-text: var(--md-sys-color-on-background);
+  --color-background: var(--color-background);
+  --color-heading: var(--color-on-background);
+  --color-text: var(--color-on-background);
 
   --md-ref-typeface-brand: 'Chakra Petch';
   --md-ref-typeface-plain: system-ui;
@@ -68,59 +68,59 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --md-sys-color-primary: rgb(169 199 255);
-    --md-sys-color-surface-tint: rgb(169 199 255);
-    --md-sys-color-on-primary: rgb(8 48 95);
-    --md-sys-color-primary-container: rgb(38 71 119);
-    --md-sys-color-on-primary-container: rgb(214 227 255);
-    --md-sys-color-secondary: rgb(189 199 220);
-    --md-sys-color-on-secondary: rgb(39 49 65);
-    --md-sys-color-secondary-container: rgb(62 71 88);
-    --md-sys-color-on-secondary-container: rgb(217 227 249);
-    --md-sys-color-tertiary: rgb(220 188 225);
-    --md-sys-color-on-tertiary: rgb(62 40 69);
-    --md-sys-color-tertiary-container: rgb(86 62 92);
-    --md-sys-color-on-tertiary-container: rgb(249 216 254);
-    --md-sys-color-error: rgb(255 180 171);
-    --md-sys-color-on-error: rgb(105 0 5);
-    --md-sys-color-error-container: rgb(147 0 10);
-    --md-sys-color-on-error-container: rgb(255 218 214);
-    --md-sys-color-background: rgb(17 19 24);
-    --md-sys-color-on-background: rgb(226 226 233);
-    --md-sys-color-surface: rgb(17 19 24);
-    --md-sys-color-on-surface: rgb(226 226 233);
-    --md-sys-color-surface-variant: rgb(68 71 78);
-    --md-sys-color-on-surface-variant: rgb(196 198 207);
-    --md-sys-color-outline: rgb(142 144 153);
-    --md-sys-color-outline-variant: rgb(68 71 78);
-    --md-sys-color-shadow: rgb(0 0 0);
-    --md-sys-color-scrim: rgb(0 0 0);
-    --md-sys-color-inverse-surface: rgb(226 226 233);
-    --md-sys-color-inverse-on-surface: rgb(46 48 54);
-    --md-sys-color-inverse-primary: rgb(64 95 144);
-    --md-sys-color-primary-fixed: rgb(214 227 255);
-    --md-sys-color-on-primary-fixed: rgb(0 27 61);
-    --md-sys-color-primary-fixed-dim: rgb(169 199 255);
-    --md-sys-color-on-primary-fixed-variant: rgb(38 71 119);
-    --md-sys-color-secondary-fixed: rgb(217 227 249);
-    --md-sys-color-on-secondary-fixed: rgb(18 28 43);
-    --md-sys-color-secondary-fixed-dim: rgb(189 199 220);
-    --md-sys-color-on-secondary-fixed-variant: rgb(62 71 88);
-    --md-sys-color-tertiary-fixed: rgb(249 216 254);
-    --md-sys-color-on-tertiary-fixed: rgb(40 19 47);
-    --md-sys-color-tertiary-fixed-dim: rgb(220 188 225);
-    --md-sys-color-on-tertiary-fixed-variant: rgb(86 62 92);
-    --md-sys-color-surface-dim: rgb(17 19 24);
-    --md-sys-color-surface-bright: rgb(55 57 62);
-    --md-sys-color-surface-container-lowest: rgb(12 14 19);
-    --md-sys-color-surface-container-low: rgb(25 28 32);
-    --md-sys-color-surface-container: rgb(29 32 36);
-    --md-sys-color-surface-container-high: rgb(40 42 47);
-    --md-sys-color-surface-container-highest: rgb(51 53 58);
-    --md-extended-color-custom-color-color: rgb(164 201 254);
-    --md-extended-color-custom-color-on-color: rgb(0 49 93);
-    --md-extended-color-custom-color-color-container: rgb(32 72 118);
-    --md-extended-color-custom-color-on-color-container: rgb(211 227 255);
+    --color-primary: rgb(169 199 255);
+    --color-surface-tint: rgb(169 199 255);
+    --color-on-primary: rgb(8 48 95);
+    --color-primary-container: rgb(38 71 119);
+    --color-on-primary-container: rgb(214 227 255);
+    --color-secondary: rgb(189 199 220);
+    --color-on-secondary: rgb(39 49 65);
+    --color-secondary-container: rgb(62 71 88);
+    --color-on-secondary-container: rgb(217 227 249);
+    --color-tertiary: rgb(220 188 225);
+    --color-on-tertiary: rgb(62 40 69);
+    --color-tertiary-container: rgb(86 62 92);
+    --color-on-tertiary-container: rgb(249 216 254);
+    --color-error: rgb(255 180 171);
+    --color-on-error: rgb(105 0 5);
+    --color-error-container: rgb(147 0 10);
+    --color-on-error-container: rgb(255 218 214);
+    --color-background: rgb(17 19 24);
+    --color-on-background: rgb(226 226 233);
+    --color-surface: rgb(17 19 24);
+    --color-on-surface: rgb(226 226 233);
+    --color-surface-variant: rgb(68 71 78);
+    --color-on-surface-variant: rgb(196 198 207);
+    --color-outline: rgb(142 144 153);
+    --color-outline-variant: rgb(68 71 78);
+    --color-shadow: rgb(0 0 0);
+    --color-scrim: rgb(0 0 0);
+    --color-inverse-surface: rgb(226 226 233);
+    --color-inverse-on-surface: rgb(46 48 54);
+    --color-inverse-primary: rgb(64 95 144);
+    --color-primary-fixed: rgb(214 227 255);
+    --color-on-primary-fixed: rgb(0 27 61);
+    --color-primary-fixed-dim: rgb(169 199 255);
+    --color-on-primary-fixed-variant: rgb(38 71 119);
+    --color-secondary-fixed: rgb(217 227 249);
+    --color-on-secondary-fixed: rgb(18 28 43);
+    --color-secondary-fixed-dim: rgb(189 199 220);
+    --color-on-secondary-fixed-variant: rgb(62 71 88);
+    --color-tertiary-fixed: rgb(249 216 254);
+    --color-on-tertiary-fixed: rgb(40 19 47);
+    --color-tertiary-fixed-dim: rgb(220 188 225);
+    --color-on-tertiary-fixed-variant: rgb(86 62 92);
+    --color-surface-dim: rgb(17 19 24);
+    --color-surface-bright: rgb(55 57 62);
+    --color-surface-container-lowest: rgb(12 14 19);
+    --color-surface-container-low: rgb(25 28 32);
+    --color-surface-container: rgb(29 32 36);
+    --color-surface-container-high: rgb(40 42 47);
+    --color-surface-container-highest: rgb(51 53 58);
+    --extended-color-custom-color-color: rgb(164 201 254);
+    --extended-color-custom-color-on-color: rgb(0 49 93);
+    --extended-color-custom-color-color-container: rgb(32 72 118);
+    --extended-color-custom-color-on-color-container: rgb(211 227 255);
   }
 }
 
@@ -134,8 +134,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: var(--color-on-surface);
+  background: var(--color-surface);
   transition:
     color 0.5s,
     background-color 0.5s;
@@ -149,12 +149,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-:root {
-  --primary-color: #1e3a5f; /* Deep blue */
-  --secondary-color: #d9c8a9; /* Muted beige */
-  --accent-color: #689cc5; /* Soft sky blue */
-  --background-color: #f4f1e1; /* Off-white */
+/* :root {
+  --primary-color: #1e3a5f; 
+  --secondary-color: #d9c8a9; 
+  --accent-color: #689cc5; 
+  --background-color: #f4f1e1;
   --text-color: #2c2c2c;
   --font-primary: 'Noto Serif JP', serif;
   --font-secondary: 'Poppins', sans-serif;
-}
+} */
