--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -56,9 +56,9 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--color-background);
+  /* --color-background: var(--color-background);
   --color-heading: var(--color-on-background);
-  --color-text: var(--color-on-background);
+  --color-text: var(--color-on-background); */
 
   --md-ref-typeface-brand: 'Chakra Petch';
   --md-ref-typeface-plain: system-ui;
@@ -130,23 +130,6 @@
   box-sizing: border-box;
   margin: 0;
   font-weight: normal;
-}
-
-body {
-  min-height: 100vh;
-  color: var(--color-on-surface);
-  background: var(--color-surface);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
-  line-height: 1.6;
-  font-family:
-    'Chakra Petch',
-    sans-serif;
-  font-size: 16px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 /* :root {
