--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -11,8 +11,8 @@
   font-weight: normal;
   
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: var(--color-on-surface);
+  background: var(--color-surface);
   transition:
     color 0.5s,
     background-color 0.5s;
@@ -23,7 +23,7 @@
   font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
 
   *:focus {
     outline: 2px solid blue;
