style: button + link styles

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,6 +2,8 @@
 @use '@/assets/components/coin.scss' as *;
 @use '@/assets/components/pill.scss' as *;
 @use '@/assets/components/card.scss' as *;
+@use '@/assets/components/button.scss' as *;
+@use '@/assets/components/link.scss' as *;
 @import './base.css';
 
 #app-wrapper {
