--- a/src/assets/components/card.scss
+++ b/src/assets/components/card.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   padding: $spacing-md;
-  width: 400px;
+  width: min(100%,400px);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition:
