--- a/src/assets/common/variables.scss
+++ b/src/assets/common/variables.scss
@@ -7,3 +7,5 @@ $spacing-md: 16px;
 $spacing-lg: 24px;
 $spacing-xl: 32px;
 $spacing-xxl: 48px;
+
+$mobile-breakpoint: 1024px; // Mobile breakpoint for responsive design
