--- a/src/assets/common/typography.scss
+++ b/src/assets/common/typography.scss
@@ -28,66 +28,65 @@ h6 {
 h1 {
   //   font-size: 86px;
   --letter-spacing: -1.5px;
-  --min: 2rem; /* minimum value */
-  --val: 6vw; /* preferred value = 5% viewport width */
-  //--max: 5.61rem; /* maximum value */
-  --max: 4.209rem; /* maximum value */
-
+  --min: 2.986rem;
+  --val: 3vw; /* preferred value = 5% viewport width */
+  //--max: 5.61rem;
+  --max: 3.815rem;
 }
 
 h2 {
   //   font-size: 54px;
   --letter-spacing: -0.5px;
-  --min: 1.5rem; /* minimum value */
-  --val: 5vw; /* preferred value = 4% viewport width */
-  --max: 3.157rem; /* maximum value */
+  --min: 2.488rem;
+  --val: 5vw;
+  --max: 3.052rem;
 }
 
 h3 {
   //   font-size: 43px;
   --letter-spacing: 0px;
-  --min: 1.25rem; /* minimum value */
-  --val: 4vw; /* preferred value = 4% viewport width */
-  --max: 2.369rem; /* maximum value */
+  --min: 2.074rem;
+  --val: 4vw;
+  --max: 2.441rem;
 }
 
 h4 {
   //   font-size: 31px;
   --letter-spacing: 0.25px;
-  --min: 1.15rem; /* minimum value */
-  --val: 4vw; /* preferred value = 4% viewport width */
-  --max: 1.777rem; /* maximum value */
+  --min: 1.728rem;
+  --val: 4vw;
+  --max: 1.953rem;
 }
 
 h5 {
   //   font-size: 22px;
   --letter-spacing: 0px;
-  --min: 1.05rem; /* minimum value */
-  --val: 4vw; /* preferred value = 4% viewport width */
-  --max: 1.333rem; /* maximum value */
+  --min: 1.44rem;
+  --val: 4vw;
+  --max: 1.563rem;
 }
 
 h6 {
   //   font-size: 18px;
   --letter-spacing: 0.15px;
-  --min: 1.02rem; /* minimum value */
-  --val: 4vw; /* preferred value = 4% viewport width */
-  --max: 1.333rem; /* maximum value */
+  --min: 1.2rem;
+  --val: 4vw;
+  --max: 1.25rem;
 }
 
 small {
   --letter-spacing: 0.4px;
-  --min: 0.75rem;
-  --val: 0.75rem;
-  --max: 0.75rem;
+  --min: 0.833rem;
+  --val: 0.833rem;
+  --max: 0.833rem;
 }
 
 .subtitle {
   //   font-size: 14px;
   --letter-spacing: 0.15px;
-  --min: 1.5rem; /* minimum value */
-  --val: 4vw; /* preferred value = 4% viewport width */
-  --max: 2.25rem; /* maximum value */
+  --min: 1.5rem;
+  --val: 4vw;
+  --max: 2.25rem;
 }
 
 button {
