feat: linkedin + github icons + link underline style

--- a/src/assets/components/card.scss
+++ b/src/assets/components/card.scss
@@ -47,6 +47,7 @@
   transition: all 0.3s ease;
   & > div {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
