feat: new project card + refactor

--- a/src/assets/components/card.scss
+++ b/src/assets/components/card.scss
@@ -1,47 +1,80 @@
 @use '@/assets/common/variables.scss' as *; // Import variables
 
-.project-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: $spacing-md;
-  max-width: 100%;
-  width: 100%;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition:
-    transform 0.3s ease,
-    box-shadow 0.3s ease;
-  background-color: var(--color-surface-container);
-  color: var(--color-on-surface);
-
-  &:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+.card-container {
+  &:hover .card {
+    opacity: 0.4;
   }
-
-  h4 {
-    margin-bottom: $spacing-md;
+  .card:hover {
+    opacity: 1;
   }
-  & > p {
-    margin: 0px;
-  }
+}
 
-  & > ul {
+.card {
+  display: block;
+  padding: 1.33rem 1rem;
+  transition: all 0.3s ease;
+  a {
+    text-decoration: none;
+    color: var(--color-on-surface);
+    font-weight: 600;
+    font-size: 1.25rem;
+    position: relative;
+    transition: all 0.3s ease;
+    &::after {
+      position: relative;
+      top: 4px;
+      left: 0px;
+      height: 24px;
+      width: 24px;
+      margin-left: 3px;
+      content: '';
+      background-color: var(--color-primary);
+      -webkit-mask: url('@/assets/icons/arrows/ne.svg') no-repeat center;
+      mask: url('@/assets/icons/arrows/ne.svg') no-repeat center;
+      mask-size: contain;
+      align-items: center;
+      // background-image: ;
+      display: inline-block;
+      transition: all 0.3s ease;
+      transform: scale(0.6);
+    }
+  }
+  ul.tech-stack {
+    margin-top: 1rem;
     list-style: none;
     padding: 0;
     display: flex;
     gap: $spacing-sm;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
-  & > a {
-    text-align: end;
+  &:hover {
+    background-color: var(--color-surface-container);
+    color: var(--color-on-surface);
+    border-radius: 1rem;
+    a {
+      color: var(--color-primary);
+      &::after {
+        transform: scale(0.8);
+      }
+    }
   }
 }
 
-.work-card {
+.card.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 100%;
+  width: 100%;
+  color: var(--color-on-surface);
+  & > p {
+    margin: 0px;
+  }
+}
+
+.card.work {
   display: block;
   padding: 1.33rem 1rem;
   transition: all 0.3s ease;
@@ -51,58 +84,9 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
-    & > a {
-      text-decoration: none;
-      color: var(--color-on-surface);
-      font-weight: 600;
-      font-size: 1.25rem;
-      position: relative;
-      transition: all 0.3s ease;
-      &::after {
-        position: relative;
-        top: 4px;
-        left: 0px;
-        height: 24px;
-        width: 24px;
-        margin-left: 3px;
-        content: '';
-        background-color: var(--color-primary);
-        -webkit-mask: url('@/assets/icons/arrows/ne.svg') no-repeat center;
-        mask: url('@/assets/icons/arrows/ne.svg') no-repeat center;
-        mask-size: contain;
-        align-items: center;
-        // background-image: ;
-        display: inline-block;
-        transition: all 0.3s ease;
-        transform: scale(0.6);
-      }
-    }
     & > span {
       font-size: 0.8em;
       text-transform: uppercase;
-    }
-  }
-
-  ul.tech-stack {
-    margin-top: 1rem;
-    list-style: none;
-    padding: 0;
-    display: flex;
-    gap: $spacing-sm;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &:hover {
-    background-color: var(--color-surface-container);
-    color: var(--color-on-surface);
-    border-radius: 1rem;
-    & > div > a {
-      color: var(--color-primary);
-      &::after {
-        transform: scale(0.8);
-      }
     }
   }
 }
