--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -16,6 +16,14 @@
   --color-on-error: rgb(255 255 255);
   --color-error-container: rgb(255 218 214);
   --color-on-error-container: rgb(65 0 2);
+  --color-success: rgb(34 139 34);
+  --color-on-success: rgb(255 255 255);
+  --color-success-container: rgb(209 250 209);
+  --color-on-success-container: rgb(0 50 0);
+  --color-warning: rgb(255 165 0);
+  --color-on-warning: rgb(0 0 0);
+  --color-warning-container: rgb(255 244 214);
+  --color-on-warning-container: rgb(102 51 0);
   --color-background: rgb(249 249 255);
   --color-on-background: rgb(25 28 32);
   --color-surface: rgb(249 249 255);
@@ -117,7 +125,7 @@
     --extended-color-custom-color-on-color: rgb(0 49 93);
     --extended-color-custom-color-color-container: rgb(32 72 118);
     --extended-color-custom-color-on-color-container: rgb(211 227 255);
-    --halo-color: rgba(32, 72,118, 0.15); /* --extended-color-custom-color-color-container */
+    --halo-color: rgba(32, 72, 118, 0.15); /* --extended-color-custom-color-color-container */
   }
 }
 
