--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -70,7 +70,7 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --color-primary: rgb(169 199 255);
     --color-surface-tint: rgb(169 199 255);
