--- a/src/assets/themes/light.css
+++ b/src/assets/themes/light.css
@@ -1,55 +1,64 @@
 .light {
-  --md-sys-color-primary: rgb(64 95 144);
-  --md-sys-color-surface-tint: rgb(64 95 144);
-  --md-sys-color-on-primary: rgb(255 255 255);
-  --md-sys-color-primary-container: rgb(214 227 255);
-  --md-sys-color-on-primary-container: rgb(0 27 61);
-  --md-sys-color-secondary: rgb(85 95 113);
-  --md-sys-color-on-secondary: rgb(255 255 255);
-  --md-sys-color-secondary-container: rgb(217 227 249);
-  --md-sys-color-on-secondary-container: rgb(18 28 43);
-  --md-sys-color-tertiary: rgb(111 86 117);
-  --md-sys-color-on-tertiary: rgb(255 255 255);
-  --md-sys-color-tertiary-container: rgb(249 216 254);
-  --md-sys-color-on-tertiary-container: rgb(40 19 47);
-  --md-sys-color-error: rgb(186 26 26);
-  --md-sys-color-on-error: rgb(255 255 255);
-  --md-sys-color-error-container: rgb(255 218 214);
-  --md-sys-color-on-error-container: rgb(65 0 2);
-  --md-sys-color-background: rgb(249 249 255);
-  --md-sys-color-on-background: rgb(25 28 32);
-  --md-sys-color-surface: rgb(249 249 255);
-  --md-sys-color-on-surface: rgb(25 28 32);
-  --md-sys-color-surface-variant: rgb(224 226 236);
-  --md-sys-color-on-surface-variant: rgb(68 71 78);
-  --md-sys-color-outline: rgb(116 119 127);
-  --md-sys-color-outline-variant: rgb(196 198 207);
-  --md-sys-color-shadow: rgb(0 0 0);
-  --md-sys-color-scrim: rgb(0 0 0);
-  --md-sys-color-inverse-surface: rgb(46 48 54);
-  --md-sys-color-inverse-on-surface: rgb(240 240 247);
-  --md-sys-color-inverse-primary: rgb(169 199 255);
-  --md-sys-color-primary-fixed: rgb(214 227 255);
-  --md-sys-color-on-primary-fixed: rgb(0 27 61);
-  --md-sys-color-primary-fixed-dim: rgb(169 199 255);
-  --md-sys-color-on-primary-fixed-variant: rgb(38 71 119);
-  --md-sys-color-secondary-fixed: rgb(217 227 249);
-  --md-sys-color-on-secondary-fixed: rgb(18 28 43);
-  --md-sys-color-secondary-fixed-dim: rgb(189 199 220);
-  --md-sys-color-on-secondary-fixed-variant: rgb(62 71 88);
-  --md-sys-color-tertiary-fixed: rgb(249 216 254);
-  --md-sys-color-on-tertiary-fixed: rgb(40 19 47);
-  --md-sys-color-tertiary-fixed-dim: rgb(220 188 225);
-  --md-sys-color-on-tertiary-fixed-variant: rgb(86 62 92);
-  --md-sys-color-surface-dim: rgb(217 217 224);
-  --md-sys-color-surface-bright: rgb(249 249 255);
-  --md-sys-color-surface-container-lowest: rgb(255 255 255);
-  --md-sys-color-surface-container-low: rgb(243 243 250);
-  --md-sys-color-surface-container: rgb(237 237 244);
-  --md-sys-color-surface-container-high: rgb(231 232 238);
-  --md-sys-color-surface-container-highest: rgb(226 226 233);
-  --md-extended-color-custom-color-color: rgb(58 96 143);
-  --md-extended-color-custom-color-on-color: rgb(255 255 255);
-  --md-extended-color-custom-color-color-container: rgb(211 227 255);
-  --md-extended-color-custom-color-on-color-container: rgb(0 28 57);
+  --color-primary: rgb(64 95 144);
+  --color-surface-tint: rgb(64 95 144);
+  --color-on-primary: rgb(255 255 255);
+  --color-primary-container: rgb(214 227 255);
+  --color-on-primary-container: rgb(0 27 61);
+  --color-secondary: rgb(85 95 113);
+  --color-on-secondary: rgb(255 255 255);
+  --color-secondary-container: rgb(217 227 249);
+  --color-on-secondary-container: rgb(18 28 43);
+  --color-tertiary: rgb(111 86 117);
+  --color-on-tertiary: rgb(255 255 255);
+  --color-tertiary-container: rgb(249 216 254);
+  --color-on-tertiary-container: rgb(40 19 47);
+  --color-error: rgb(186 26 26);
+  --color-on-error: rgb(255 255 255);
+  --color-error-container: rgb(255 218 214);
+  --color-on-error-container: rgb(65 0 2);
+  --color-success: rgb(34 139 34);
+  --color-on-success: rgb(255 255 255);
+  --color-success-container: rgb(209 250 209);
+  --color-on-success-container: rgb(0 50 0);
+  --color-warning: rgb(255 165 0);
+  --color-on-warning: rgb(0 0 0);
+  --color-warning-container: rgb(255 244 214);
+  --color-on-warning-container: rgb(102 51 0);
+  --color-background: rgb(249 249 255);
+  --color-on-background: rgb(25 28 32);
+  --color-surface: rgb(249 249 255);
+  --color-on-surface: rgb(25 28 32);
+  --color-surface-variant: rgb(224 226 236);
+  --color-on-surface-variant: rgb(68 71 78);
+  --color-outline: rgb(116 119 127);
+  --color-outline-variant: rgb(196 198 207);
+  --color-shadow: rgb(0 0 0);
+  --color-scrim: rgb(0 0 0);
+  --color-inverse-surface: rgb(46 48 54);
+  --color-inverse-on-surface: rgb(240 240 247);
+  --color-inverse-primary: rgb(169 199 255);
+  --color-primary-fixed: rgb(214 227 255);
+  --color-on-primary-fixed: rgb(0 27 61);
+  --color-primary-fixed-dim: rgb(169 199 255);
+  --color-on-primary-fixed-variant: rgb(38 71 119);
+  --color-secondary-fixed: rgb(217 227 249);
+  --color-on-secondary-fixed: rgb(18 28 43);
+  --color-secondary-fixed-dim: rgb(189 199 220);
+  --color-on-secondary-fixed-variant: rgb(62 71 88);
+  --color-tertiary-fixed: rgb(249 216 254);
+  --color-on-tertiary-fixed: rgb(40 19 47);
+  --color-tertiary-fixed-dim: rgb(220 188 225);
+  --color-on-tertiary-fixed-variant: rgb(86 62 92);
+  --color-surface-dim: rgb(217 217 224);
+  --color-surface-bright: rgb(249 249 255);
+  --color-surface-container-lowest: rgb(255 255 255);
+  --color-surface-container-low: rgb(243 243 250);
+  --color-surface-container: rgb(237 237 244);
+  --color-surface-container-high: rgb(231 232 238);
+  --color-surface-container-highest: rgb(226 226 233);
+  --extended-color-custom-color-color: rgb(58 96 143);
+  --extended-color-custom-color-on-color: rgb(255 255 255);
+  --extended-color-custom-color-color-container: rgb(211 227 255);
+  --extended-color-custom-color-on-color-container: rgb(0 28 57);
+  --halo-color: rgba(211, 227, 255, 0.15);
 }
